# Cryptograph-android

./: build.gradle.kts  settings.gradle.kts
anti/: build.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/keysets/: AESGCM128.json  AESGCM256.json  AESSIV256.json  CHACHA20POLY1305.json  PRIVATEECIESP256.json  PRIVATEECIESP256CPMPRESSED.json  PRIVATEECIESSERVER.json  PUBLICECIESCLIENT.json  PUBLICECIESP256.json  PUBLICECIESP256CPMPRESSED.json  XCHACHA20POLY1305.json
app/src/main/res/values/: themes.xml
cryptography/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle.kts
rasp/: build.gradle  build.gradle.kts
rasp/src/main/cpp/: CMakeLists.txt  rasp.cpp  rasp.h
rasp/src/main/cpp/check/: check_dual_app.cpp  check_dual_app.h  check_emulator.cpp  check_emulator.h  check_frida.cpp  check_frida.h  check_mem_dump.cpp  check_mem_dump.h  check_xposed.cpp  check_xposed.h
rasp/src/main/cpp/io/: CMakeLists.txt
rasp/src/main/cpp/utils/: Utils.cpp  Utils.h  mylibc.h
rasp/src/main/native/: CMakeLists.txt  rasp.cpp  rasp.h
rasp/src/main/native/check/: check_dual_app.cpp  check_dual_app.h  check_emulator.cpp  check_emulator.h  check_frida.cpp  check_frida.h  check_mem_dump.cpp  check_mem_dump.h  check_xposed.cpp  check_xposed.h
rasp/src/main/native/jni/app/: ActivityThread.h
rasp/src/main/native/jni/core/: JavaMethod.h
rasp/src/main/native/utils/: Utils.h
rasp/src/main/native/xposeddetector/: classloader.cpp  xposed.cpp  xposed.h
(+75 files in other folders)
